[package]

name = "CodeJamAI"
version = "0.0.1"
authors = ["Scott Cooper <scott.cooper2@mail.mcgill.ca", "Jit Kanetkar <satyajit.kanetkar@mail.mcgill.ca"]

# [dependencies.image]
# git = "https://github.com/PistonDevelopers/rust-image"


# [dependencies.nalgebra]
# git = "https://github.com/sebcrozet/nalgebra"


[dependencies.rust-GSL]
git = "https://github.com/sacooper/rust-GSL.git"
#path = "/home/scott/Dropbox/Programming/Rust/rust-GSL"
